--- a/src/app/component/template/sidenav/sidenav.component.html
+++ b/src/app/component/template/sidenav/sidenav.component.html
@@ -13,6 +13,12 @@
                 <i class="material-icons">room</i>
                 Quartos
             </a>
+
+            <a mat-list-item routerLink="/paginador">
+                <i class="material-icons">room</i>
+                Paginador
+            </a>
+
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="content ">
