--- a/src/app/component/view/hotel/hotel-form/hotel-form.component.html
+++ b/src/app/component/view/hotel/hotel-form/hotel-form.component.html
@@ -1,19 +1,21 @@
 <mat-card>
     <mat-card-title>{{titulo}}</mat-card-title>
-    <form>
+    <form [formGroup]="formulario" (ngSubmit)="salvar()">
         <mat-form-field>
-            <input matInput placeholder="Nome do Hotel" name="nmHotel" [(ngModel)]="hotel.nmHotel">
+            <input matInput placeholder="Nome do Hotel" formControlName="nmHotel">
         </mat-form-field>
         <mat-form-field>
-            <input matInput placeholder="Endereço" name="endereco" [(ngModel)]="hotel.endereco">
-        </mat-form-field>
-
-        <mat-form-field>
-            <input matInput type="number" placeholder="Quantidade de Estrelas" name="qtdEstrelas" [(ngModel)]="hotel.qtdEstrelas">
+            <input matInput placeholder="Endereço"  formControlName="endereco">
         </mat-form-field>
 
+        <mat-form-field>
+            <input matInput type="number" placeholder="Quantidade de Estrelas" formControlName="qtdEstrelas">
+        </mat-form-field>
+
+    
+        <span class="botton">
+            <button mat-raised-button color="primary" type="submit">Salvar</button>
+            <button mat-raised-button color="warn" routerLink="/hoteis/">Cancelar</button>
+        </span>
     </form>
-
-    <button mat-raised-button color="primary" (click)="salvar()">Salvar</button>
-    <button mat-raised-button color="warn" routerLink="/hoteis/">Cancelar</button>
 </mat-card>
