--- a/src/app/component/view/hotel/hotel-list/hotel-list.component.css
+++ b/src/app/component/view/hotel/hotel-list/hotel-list.component.css
@@ -6,3 +6,22 @@ table {
     position: absolute;
     right: 50px;
 }
+
+.example-loading-shade {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 56px;
+    right: 0;
+    background: rgba(0, 0, 0, 0.15);
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .example-rate-limit-reached {
+    max-width: 360px;
+    text-align: center;
+  }
+  
