--- a/src/app/component/view/hotel/hotel-list/hotel-list.component.html
+++ b/src/app/component/view/hotel/hotel-list/hotel-list.component.html
@@ -1,56 +1,63 @@
-<mat-card class="example-card mat-elevation-z3" >
-    <button mat-button color="primary" class="botton_new" routerLink="/hoteis/form">Novo Hotel</button>
-    <mat-card-header>
-        <mat-card-title>Hoteis</mat-card-title>
-        <mat-card-subtitle>Lista de Hoteis Cadastrados</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
+<div class="example-loading-shade" *ngIf="isLoadingResults || isRateLimitReached">
+  <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+  <div class="example-rate-limit-reached" *ngIf="isRateLimitReached">
+    GitHub's API rate limit has been reached. It will be reset in one minute.
+  </div>
+</div>
 
-        <table mat-table [dataSource]="hoteis" class="mat-elevation-z8">
+<mat-card class="example-card mat-elevation-z3">
+  <button mat-button color="primary" class="botton_new" routerLink="/hoteis/form">Novo Hotel</button>
+  <mat-card-header>
+    <mat-card-title>Hoteis</mat-card-title>
+    <mat-card-subtitle>Lista de Hoteis Cadastrados</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
 
-        
-            <ng-container matColumnDef="id">
-              <th mat-header-cell *matHeaderCellDef> #ID </th>
-              <td mat-cell *matCellDef="let hotel"> {{hotel.idHotel}} </td>
-            </ng-container>
-          
-            <!-- Name Column -->
-            <ng-container matColumnDef="nome">
-              <th mat-header-cell *matHeaderCellDef> Nome do Hotel </th>
-              <td mat-cell *matCellDef="let hotel"> {{hotel.nmHotel}} </td>
-            </ng-container>
-          
-            <!-- Weight Column -->
-            <ng-container matColumnDef="endereco">
-              <th mat-header-cell *matHeaderCellDef> Endereço </th>
-              <td mat-cell *matCellDef="let hotel"> {{hotel.endereco}} </td>
-            </ng-container>
-          
-            <!-- Symbol Column -->
-            <ng-container matColumnDef="estrelas">
-              <th mat-header-cell *matHeaderCellDef> Quantidade de Estrelas </th>
-              <td mat-cell *matCellDef="let hotel"> {{hotel.qtdEstrelas}} </td>
-            </ng-container>
-          
-            <ng-container matColumnDef="acao">
-                <th mat-header-cell *matHeaderCellDef>Acões </th>
-                <td mat-cell *matCellDef="let hotel">
-                    <a routerLink="/hoteis/{{hotel.idHotel}}" class="edit">
-                        <button mat-raised-button color="primary"><i class="material-icons">edit</i></button>
-                    </a>
-                    <a>
-                        <button mat-raised-button color="warn" (click)="excluir(hotel)"><i class="material-icons">delete</i></button>
-                    </a>
-                </td>
-              </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          </table>
+    <table mat-table [dataSource]="hoteis" class="mat-elevation-z8" matSort matSortActive="nmHotel" matSortDisableClear
+      matSortDirection="desc">
 
 
-    </mat-card-content>
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> #ID </th>
+        <td mat-cell *matCellDef="let hotel"> {{hotel.idHotel}} </td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="nmHotel">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear> Nome do Hotel </th>
+        <td mat-cell *matCellDef="let hotel"> {{hotel.nmHotel}} </td>
+      </ng-container>
+
+      <!-- Weight Column -->
+      <ng-container matColumnDef="endereco">
+        <th mat-header-cell *matHeaderCellDef> Endereço </th>
+        <td mat-cell *matCellDef="let hotel"> {{hotel.endereco}} </td>
+      </ng-container>
+
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="estrelas">
+        <th mat-header-cell *matHeaderCellDef> Quantidade de Estrelas </th>
+        <td mat-cell *matCellDef="let hotel"> {{hotel.qtdEstrelas}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="acao">
+        <th mat-header-cell *matHeaderCellDef>Acões </th>
+        <td mat-cell *matCellDef="let hotel">
+          <a routerLink="/hoteis/{{hotel.idHotel}}" class="edit">
+            <button mat-raised-button color="primary"><i class="material-icons">edit</i></button>
+          </a>
+          <a>
+            <button mat-raised-button color="warn" (click)="excluir(hotel)"><i
+                class="material-icons">delete</i></button>
+          </a>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    <mat-paginator [length]="resultsLength" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]"
+      aria-label="Seleciona a página para retornar os hoteis"></mat-paginator>
+
+  </mat-card-content>
 </mat-card>
-
-
-
